--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -1,6 +1,6 @@
 body {
     text-align: center;
-    /* border: 1px solid red; */
+    border: 1px solid red; 
     padding: 0;
     margin-top: 0;
     margin-bottom: 0;
@@ -17,5 +17,11 @@ footer {
     bottom: 0;
     margin-bottom: 1%;
     width: 100%;
-    /* border: 1px solid black; */
+    border: 1px solid black;
+}
+
+.firstDiv{
+    border: 1px solid magenta; 
+    width: 50%;
+    margin: auto;
 }
