--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -1,27 +1,67 @@
+html {
+    border: 3px dotted cadetblue;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    overflow: auto; /* edit here */
+}
+
 body {
+    position: relative;
     text-align: center;
     border: 1px solid red; 
+    min-height: 100vh;
+    margin: 0;
     padding: 0;
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: 1%;
-    margin-right: 1%;
 }
 
 header {
-    margin-top: 1%;
+    border: 2px double palegreen;
+    margin-top: 2%;
+}
+
+.headerContainer {
+    border: 2px double purple;
+    min-height: 50px;
+}
+
+.headerContainer .headerLogo {
+    position: relative;
+    /* display: inline; */
+    float: left;
+}
+
+.headerContainer .headerItem {
+    display: inline;
+    float: right;
+    right: 0;
+    line-height: 50px;
 }
 
 footer {
-    position: fixed;
+    position: absolute;
     bottom: 0;
+    left: 0;
     margin-bottom: 1%;
     width: 100%;
     border: 1px solid black;
+    padding: 0;
 }
 
-.firstDiv{
+.footerContainer {
+    border: 1px dashed cyan;
+    margin: 0;
+    padding: 0;
+}
+
+.mainContainer {
+    border: 2px solid chocolate;
+}
+
+.firstDiv {
     border: 1px solid magenta; 
-    width: 50%;
+    width: 80%;
+    height: 84vh;
     margin: auto;
+    overflow-y: visible;
 }
