--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -89,7 +89,7 @@ footer {
     width: auto;
     margin: auto;
     text-align: center;
-    margin-top: 250px;
+    margin-top: 25%;
 }
 
 #mainLogo {
