--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -4,7 +4,7 @@ html {
     min-width: 100%;
     margin: auto;
     padding: 0;
-    overflow: visible; /* edit here */
+    overflow: scroll; /* edit here */
 }
 
 body {
@@ -178,7 +178,7 @@ h1 p:hover {
 }
 
 .areaContainer {
-    border: 2px solid black;
+    /* border: 2px solid black; */
     text-align: center;
     display: flex;
     height: 150px;
@@ -205,16 +205,16 @@ h1 p:hover {
 }
 
 .loginArea {
-    border: 3px dotted red;
+    /* border: 3px dotted red; */
 }
 
 .registerArea {
-    border: 3px dotted blue;
+    /* border: 3px dotted blue; */
 }
 
 .mainContentDiv { /* used by loginRegisterPage.php */
     position: absolute;
-    border: 3px double rgb(255, 0, 0);
+    /* border: 3px double rgb(255, 0, 0); */
     min-height: 100%;
     min-width: 80%;
     z-index: 0; /* to place it on top of "firstDiv" */
@@ -222,7 +222,7 @@ h1 p:hover {
 }
 
 .loginRegContainer {
-    border: 2px solid rgb(223, 248, 0);
+    /* border: 2px solid rgb(223, 248, 0); */
     position: absolute;    /* margin: 30%; */
     /* margin-top: 150px; */
     min-width: 100%;
@@ -230,11 +230,11 @@ h1 p:hover {
 }
 
 .loginContainer {
-    border: 2px solid rgb(255, 0, 106);
+    /* border: 2px solid rgb(255, 0, 106); */
 }
 
 .regContainer {
-    border: 2px solid rgb(247, 0, 255);
+    /* border: 2px solid rgb(247, 0, 255); */
 }
 
 .loginContainer:hover, .regContainer:hover {
@@ -243,15 +243,27 @@ h1 p:hover {
 
 #loginRegCarousel {
     margin-top: 160px;
-
 }
 
 .loginFormDiv, .registerFormDiv {
-    border: 3px dotted blueviolet;
+    /* border: 3px dotted blueviolet; */
+    /* min-height: 700px; */
     min-height: 700px;
     text-align: center;
 }
 
-.carousel-indicators {
-    position: absolute;
+#login {
+    margin-top: 80px
+} 
+
+#register {
+    margin-top: 60px
+}
+
+#formHrLine {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
 }
