--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -263,11 +263,11 @@ h1 p:hover {
 }
 
 #login {
-    margin-top: 80px
+    margin-top: 3%;
 } 
 
 #register {
-    margin-top: 60px
+    margin-top: 3%;
 }
 
 #formHrLine {
