--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -1,37 +1,44 @@
 html {
-    /* border: 3px double cadetblue; */
-    height: 100%;
+    border: 3px double cadetblue;
+    /* height: 100%; */
     width: 100%;
     margin: 0;
     padding: 0;
     /* overflow-y: hidden; */
+
+    /* height: 100vh; */
 }
 
 body {
-    position: relative;
+    /* position: static; */
     /* text-align: center; */
-    /* border: 3px solid red;  */
-    height: 100%;
+    border: 3px solid red; 
+    /* height: 97%; */
     /* min-width: 100%; */
     margin: 0;
     padding: 0;
     /* background: rgb(2,0,36); */
-    background-image: linear-gradient(to top, #ffffff, #f8faff, #ebf7ff, #daf5ff, #caf3f9, #bdf4f5, #b2f4ee, #aaf4e3, #9cf7e0, #8efadd, #80fdd8, #71ffd3);    background-position: center;
+    
+    background-image: linear-gradient(to bottom, #ffffff, #f8faff, #ebf7ff, #daf5ff, #caf3f9, #bdf4f5, #b2f4ee, #aaf4e3, #9cf7e0, #8efadd, #80fdd8, #71ffd3);    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    /*overflow-y: scroll; edit here */
 
+    /*overflow-y: scroll;   edit here */
+
+    /* overflow-y: visible; */
+
+    height: 100vh;
 }
 
 header {
-    /* border: 5px dotted darkgoldenrod; */
+    border: 5px dotted darkgoldenrod;
     /* margin-top: 2%; */
-    position: relative;
+    /* position: relative; */
     width: 100%;
 }
 
 .headerContainer {
-    /* border: 2px double purple; */
+    border: 2px double purple;
     height: 50px;
 }
 
@@ -56,8 +63,8 @@ header {
 }
 
 footer {
-    /* border: 3px dotted green; */
-    position: relative;
+    border: 3px dotted green;
+    position: static;
     bottom: 0;
     width: 100%;
     /* position: absolute; */
@@ -65,7 +72,7 @@ footer {
     /* left: 0; */
     /* margin-bottom: 1%; */
     /* width: 100%; */
-    /* border: 1px solid black; */
+    border: 1px solid black;
     /* padding: 0; */
     z-index: -2;
     
@@ -74,7 +81,7 @@ footer {
 
 .footerContainer {
     position: inherit;
-    /* border: 3px dashed red; */
+    border: 3px dashed red;
     /* bottom: 0; */
     width: 100%;
     margin: auto;
@@ -87,39 +94,49 @@ footer {
 
 .mainContainer {
     position: relative;
-    border: 2px solid #fed8b1;
-    border-left: none;
-    border-right: none;
-    border-top: 1px solid #fed8b1;
-    border-bottom: none;
+    /* border: 2px solid #fed8b1; */
+    /* border-left: none; */
+    /* border-right: none; */
+    /* border-top: 1px solid #fed8b1; */
+    /* border-bottom: none; */
     /* min-height: 100%; */
-    height: 100%; /*hereeeeeeeeeeeeeeeeeeeeeeeee*/
-    min-height: 80%;
-    overflow-y: scroll;
+    /*height: 100%; hereeeeeeeeeeeeeeeeeeeeeeeee*/
+    /* min-height: 80%; */
+    /* overflow-y: auto; */
+
+    height: 100vh;
+
+    /* background-image: linear-gradient(to bottom, #ffffff, #f8faff, #ebf7ff, #daf5ff, #caf3f9, #bdf4f5, #b2f4ee, #aaf4e3, #9cf7e0, #8efadd, #80fdd8, #71ffd3);    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; */
+
+    border: 5px double slateblue;
 }
 
 .firstDiv {
-    /* border: 3px solid magenta;  */
+    border: 3px solid magenta; 
     width: 80%;
     margin: auto;
-    /* overflow-y: visible; */
+    /* overflow-y: scroll; */
     /* min-height: 100vh; */
     z-index: -1;
     /* height: 100%; */
 }
 
 .secondDiv {
-    /* border: 4px dotted mediumpurple; */
+    border: 4px dotted mediumpurple;
     /* margin-top: 12vh; */
     width: auto;
     margin: auto;
     text-align: center;
     margin-top: 20%;
+
+    
 }
 
 #mainLogo {
     position: absolute;
-    /* border: 2px solid darkorange; */
+    border: 2px solid darkorange;
     /* width: 150px; */
     /* height: 130px; */
     /* border-radius: 50%; */
@@ -181,7 +198,7 @@ footer {
 .logoContainer {
     display: flex;
     margin: auto;
-    /* border: 2px double crimson; */
+    border: 2px double crimson;
 }
 
 h1 p { /* belongs to index.php */
